-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 13
-
Component/s: hotspot
The fix for JDK-8221738 was only intended to change the behaviour of the ErrorFile handling, but the implementation of that change affects all users of
prepare_log_file - which also affected the replay log file (seeJDK-8223885). That was not expected/intended or approved by the CSR.
I propose that we rework that fix so that prepare_log_file takes a boolean parameter "can_overwrite" which is then passed through, so that we can only change the ErrorFile handling. If there is a desire to also change the replay log file handling then that should be done through its own RFE and CSR request.
prepare_log_file - which also affected the replay log file (see
I propose that we rework that fix so that prepare_log_file takes a boolean parameter "can_overwrite" which is then passed through, so that we can only change the ErrorFile handling. If there is a desire to also change the replay log file handling then that should be done through its own RFE and CSR request.
- relates to
-
JDK-8223885 hs_err and replay file may contain garbage when overwriting existing file
-
- Resolved
-
-
JDK-8221738 ErrorFile option does not handle pre-existing error files of the same name
-
- Resolved
-