8224023: Redo the fix for ErrorFile option does not handle pre-existing error files of the same name

Reviewed-by: clanger, dholmes